# ai_changelog

./: .gitignore  .pre-commit-config.yaml  AI_CHANGELOG-claude-2.md  AI_CHANGELOG.md  Dockerfile  LICENSE  README.md  ai_changelog.py  hello_world.py  pyproject.toml  requirements.txt  update_changelog.sh
.github/workflows/: ai_changelog_main_pr.yml  ai_changelog_main_push.yml  bumpver.yml  docker-hub.yml  publish_on_pypi.yml
ai_changelog/: __init__.py  __main__.py  ai_changelog.py  pydantic_models.py  string_templates.py  update.py  utils.py
