[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_changelog"
version = "0.0.1"
description = "A Python project that generates AI-based changelogs."
#authors = ["Your Name <your.email@example.com>"]
#readme = "README.md"
dependencies = [
    "langchain",
    "openai",
    "pydantic",
]

[project.scripts]
ai_changelog = "ai_changelog.__main__:main"

#[project]
#name = "realpython-reader"
#version = "1.0.0"
#description = "Read the latest Real Python tutorials"
#readme = "README.md"
#authors = [{ name = "Real Python", email = "info@realpython.com" }]
#license = { file = "LICENSE" }
#classifiers = [
#    "License :: OSI Approved :: MIT License",
#    "Programming Language :: Python",
#    "Programming Language :: Python :: 3",
#]
#keywords = ["feed", "reader", "tutorial"]
#
#requires-python = ">=3.9"

#[project.optional-dependencies]
#dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]
#
#[project.urls]
#Homepage = "https://github.com/realpython/reader"
#
