[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_changelog"
version = "0.0.1"
description = "A Python project that generates AI-based changelogs."
authors = ["Joshua Sundance Bailey"]
readme = "README.md"
dependencies = [
    "langchain",
    "openai",
    "pydantic",
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["github", "langchain", "changelog", "llm"]
requires-python = ">=3.7"
[project.urls]
Homepage = "https://github.com/joshuasundance-swca/ai_changelog"

[project.scripts]
ai_changelog = "ai_changelog.__main__:main"


#[project.optional-dependencies]
#dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]
