[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_changelog"
version = "0.0.14"
description = "A Python project that generates AI-based changelogs."
authors = [{ name = "Joshua Sundance Bailey"}]
readme = "README.md"
dependencies = [
    "langchain",
    "openai",
    "pydantic",
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["langchain", "changelog", "github", "openai", "developer-tools", "documentation"]
requires-python = ">=3.7"
[project.urls]
Homepage = "https://github.com/joshuasundance-swca/ai_changelog"

[project.scripts]
ai_changelog = "ai_changelog.__main__:main"

[project.optional-dependencies]
dev = ["pre-commit", "bumpver"]

[tool.bumpver]
current_version = "0.0.14"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"ai_changelog/__init__.py" = ['__version__ = "{version}"']
